package com.example.tleilax.model;

public class Prey extends Animal {

    public Prey(int x, int y, EntityType type) {
        super(x, y, type);
    }
}
