@startuml
title Domain Model
skinparam backgroundColor transparent
skinparam shadowing false
skinparam dpi 180
skinparam defaultFontName Helvetica
skinparam ArrowColor #475569
skinparam ClassBorderColor #0F172A
skinparam ClassBackgroundColor #FFFFFF
skinparam ClassHeaderBackgroundColor #E2E8F0
skinparam ClassAttributeIconSize 0
skinparam packageStyle rectangle
skinparam linetype polyline
left to right direction
hide empty methods
hide empty fields

package "model" {
  abstract class Entity {
    +x : int
    +y : int
    +energy : int
    +health : int
    +type : EntityType
    +isAlive() : boolean
    +canReproduce() : boolean
    +spawnOffspring(x, y) : Entity
  }

  abstract class Animal {
    +speed : int
    +visionRange : int
    +attackPower : int
    +attackRange : int
  }

  class Predator
  class Prey
  class Plant

  enum EntityType {
    WOLF
    RABBIT
    MOUSE
    DEER
    GRASS
    BERRY_BUSH
    TREE
  }
}

Entity <|-- Animal
Animal <|-- Predator
Animal <|-- Prey
Entity <|-- Plant
Entity --> EntityType : type
@enduml
